--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-SECRET_KEY="secret testing key"
-HOST="0.0.0.0"
-PORT="5000"
-CANADA_ADDR="sdc-serv.usask.ca:5300"
-DEBUG="false" #false/true
+SECRET_KEY="secret testing key" # Secret key for Flask app
+HOST="0.0.0.0" # Host for the Flask server
+PORT="5000" # Port for the Flask server
+CANADA_ADDR="" # Address for the Canada server
