--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ SECRET_KEY="secret testing key" # Secret key for Flask app
 HOST="0.0.0.0" # Host for the Flask server
 PORT="5000" # Port for the Flask server
 CANADA_ADDR="" # Address for the Canada server
+MAX_DAYS_STORE_ECHOES=30 # Number of days to store echoes in database
